--- a/.envrc
+++ b/.envrc
@@ -1,5 +1,6 @@
 #!/bin/bash
 
+alias k="sudo /usr/local/bin/k3s kubectl"
 export ISTIO_VERSION=1.7.4
 export PROJECT_HOME="${PWD}"
 export ISTIO_HOME="${PROJECT_HOME}/istio-${ISTIO_VERSION}"
